trunk/appointment/src/objects/Calendar_Field__c.object
<CustomObject>
    <fields>
        <fullName>Calendar_Settings__c</fullName>
        <label>Settings</label>
        <referenceTo>Calendar_Settings__c</referenceTo>
        <relationshipLabel>Calendar Fields</relationshipLabel>
        <relationshipName>Calendar_Fields</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Label__c</fullName>
        <label>Label</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Order__c</fullName>
        <label>Order</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Calendar Field</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Field Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Calendar Fields</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>